# smart-debug

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CI.yml
smart-debug-derive/: Cargo.toml  README.md
smart-debug-derive/src/: body_impl.rs  lib.rs  utils.rs
smart-debug-derive/src/attr/: container.rs  field.rs
src/: body_impl.rs  lib.rs  wrappers.rs
src/attr/: field.rs
tests/: tests.rs
tests/snapshots/: tests__basic.snap  tests__container_debug_str.snap  tests__container_lit_str.snap  tests__format_str.snap  tests__kitchen_sink.snap  tests__tuple_struct-2.snap  tests__tuple_struct-3.snap  tests__tuple_struct-4.snap  tests__tuple_struct.snap  tests__unit_struct.snap
