[workspace]
members = [
    ".",
    "smart-debug-derive",
]

[package]
name = "smart-debug"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"
keywords = ["debug", "derive", "formatting"]
categories = ["value-formatting"]
description = "Derive macro for `Debug` with easy manipulation of fields"
repository = "https://github.com/CosmicHorrorDev/smart-debug"
homepage = "https://github.com/CosmicHorrorDev/smart-debug"

[dependencies]
smart-debug-derive = { path = "./smart-debug-derive", version = "0.0.3" }

[dev-dependencies]
insta = { version = "1.31.0", features = ["serde"] }
serde = { version = "1.0.174", features = ["derive"] }
